--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
   }
