--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,9 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "node-sass": "^4.13.1",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "sass-loader": "^8.0.2"
   }
 }
